Implementar interfaz y función de gestión de usuarios

--- a/biblioteca/src/app/app.component.html
+++ b/biblioteca/src/app/app.component.html
@@ -7,7 +7,7 @@
     <li *ngIf="!isLogin"><a (click)="registration()">Sign up</a></li>
 
     <li *ngIf="isLogin"> <a>Post Article</a></li>
-    <li *ngIf="admin()&&isLogin"> <a>Management</a></li>
+    <li *ngIf="admin()&&isLogin"> <a routerLink="management" routerLinkActive="active">Management</a></li>
     <li *ngIf="isLogin">
       <a mat-button [matMenuTriggerFor]="menu">Records</a>
       <mat-menu #menu="matMenu">
@@ -56,7 +56,7 @@
         <a>Article Record</a>
       </button>
       <button mat-menu-item *ngIf="admin()&&isLogin">
-        <a>Management</a>
+        <a routerLink="management" routerLinkActive="active">Management</a>
       </button>
       <button mat-menu-item *ngIf="isLogin">
         <a>Borrow Records</a>
