--- a/biblioteca/src/app/app.component.css
+++ b/biblioteca/src/app/app.component.css
@@ -144,6 +144,10 @@ section{
     min-width:767px ;
   }
 
+  .footer-icons{
+    display: none;
+  }
+
 }
 @media screen and (min-width: 768px) {
   .nav-display {
@@ -179,4 +183,43 @@ a{
   top: 16px;
   color: #f2f2f2;
   font-weight: 600;
+}
+.footer {
+  margin-top: 40px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer p{
+  font-weight: 600;
+  font-size: 16px;
+  color: #555555;
+}
+
+
+.footer-icons a {
+  margin: 0 10px;
+  color: #555;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.footer-icons{
+  display: inline-block;
+  transform: translate(8%,-30px);
+}
+
+.footer-icons h3{
+  margin-bottom: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  color: #555555;
+}
+
+.footer-font{
+  text-align: left;
+  display: inline-block;
+  margin-top: 12px;
+  transform: translateX(-8%);
 }
