Implementar la interfaz y funcionalidad de la página principal del usuario

--- a/biblioteca/src/app/app.component.html
+++ b/biblioteca/src/app/app.component.html
@@ -23,7 +23,7 @@
       </mat-card-title>
 
       <mat-card-content>
-        <a><mat-icon>person</mat-icon> Personal page</a>
+        <a (click)="openPersonalPage()"><mat-icon>person</mat-icon> Personal page</a>
         <a><mat-icon>bookmark</mat-icon> My Bookmark</a>
         <a routerLink="home" routerLinkActive="active"  (click)="logout()"><mat-icon>logout</mat-icon> Logout</a>
       </mat-card-content>
