mplementar la interfaz para mostrar el avatar del usuario

--- a/biblioteca/src/app/app.component.html
+++ b/biblioteca/src/app/app.component.html
@@ -19,6 +19,7 @@
 
     <mat-card class="personal" *ngIf="isLogin">
       <mat-card-title>
+        <img [src]="avatarUrl"  alt="404--NOT FOUND">
         <p class="user-name">{{userData.name}}</p>
       </mat-card-title>
 
