--- a/biblioteca/src/app/app.component.css
+++ b/biblioteca/src/app/app.component.css
@@ -223,3 +223,14 @@ a{
   margin-top: 12px;
   transform: translateX(-8%);
 }
+
+.personal img{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+mat-icon{
+  transform: translateY(5px);
+}
