--- a/biblioteca/src/app/management/management.component.html
+++ b/biblioteca/src/app/management/management.component.html
@@ -42,7 +42,7 @@
           </ng-container>
           <ng-container matColumnDef="view">
             <th mat-header-cell *matHeaderCellDef> View </th>
-            <td mat-cell *matCellDef="let element"><mat-icon> visibility</mat-icon></td>
+            <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="openPersonalPage(element.telephone)"><mat-icon> visibility</mat-icon></button></td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef=" lowForUserList "></tr>
           <tr mat-row *matRowDef="let row; columns: lowForUserList;"></tr>
