--- a/biblioteca/src/app/home/personal-page/personal-page.component.html
+++ b/biblioteca/src/app/home/personal-page/personal-page.component.html
@@ -11,7 +11,7 @@
       <p class="wallet">E-wallet balance:{{wallet}}€</p>
       <p class="recharge" (click)="openRechargePage()">Recharge</p>
       <p class="billing-records" (click)="openWithdrawMoneyPage()">Withdraw Money</p>
-      <p class="billing-records">Billing records</p>
+      <p class="billing-records" (click)="openBillingRecordsPage()">Billing records</p>
     </div>
 
     <div class="avatarBox">
