--- a/biblioteca/src/app/management/management.component.html
+++ b/biblioteca/src/app/management/management.component.html
@@ -50,6 +50,46 @@
         <mat-paginator #userPaginator [pageSizeOptions]="[5, 10, 25, 100]" ></mat-paginator>
       </mat-tab>
 
+      <mat-tab label="BOOK">
+        <mat-card-title>
+          <h1>Books Management</h1>
+          <button mat-flat-button (click)="openAddBookPage()">Add Book</button>
+        </mat-card-title>
+        <mat-form-field class="example-full-width">
+          <mat-label>Search</mat-label>
+          <input matInput (keyup)="applyBookFilter($event)" placeholder="Ex. Mia">
+        </mat-form-field>
+        <table mat-table #bookSort='matSort' [dataSource]="bookDataSource" class="mat-elevation-z8" matSort>
+          <ng-container matColumnDef="bookID">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> BookID </th>
+            <td mat-cell *matCellDef="let element"  > {{element.bookID}} </td>
+          </ng-container>
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element"  > {{element.name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element"  > {{element.status}} </td>
+          </ng-container>
+          <ng-container matColumnDef="view">
+            <th mat-header-cell *matHeaderCellDef> View </th>
+            <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="openBookPage(element.bookID)"><mat-icon> visibility</mat-icon> </button></td>
+          </ng-container>
+          <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef> Management </th>
+            <td mat-cell *matCellDef="let element" >
+              <button mat-icon-button  *ngIf="isRoot()||element.status=='ENABLE'" matTooltip="disable"><mat-icon>block_flipped</mat-icon></button>
+              <button mat-icon-button  *ngIf="isRoot()||element.status!='DISABLE'" matTooltip="enable"><mat-icon>check</mat-icon></button>
+              <button mat-icon-button  matTooltip="removing"><mat-icon>delete</mat-icon></button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef=" lowForBookList "></tr>
+          <tr mat-row *matRowDef="let row; columns: lowForBookList;"></tr>
+        </table>
+        <mat-paginator #bookPaginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      </mat-tab>
+
       <mat-tab label="LIBRARY">
         <mat-card-title>
           <h1>Library Setting</h1>
