--- a/biblioteca/src/app/home/book-page/book-page.component.html
+++ b/biblioteca/src/app/home/book-page/book-page.component.html
@@ -12,9 +12,9 @@
     <p *ngIf="book?.publisher">  Publisher: {{book?.publisher}}</p>
     <p *ngIf="book?.deposit">  Deposit: €{{book?.deposit}}</p>
     <p *ngIf="book?.author&&book?.author.length!=0">Author:<span class="author-name" *ngFor="let author of book?.author" [matTooltip]="author.description">{{author.name}}[{{author.nationality}}]</span></p>
-    <p *ngIf="book?.bookType&&book?.bookType!=0" class="book-type-box" >  Book Type:</p>
-    <mat-card-content *ngIf="book?.bookType">
-      <mat-chip *ngFor="let type of book?.bookType" matTooltip="{{type.description}}">
+    <p *ngIf="book?.type&&book?.type!=0" class="book-type-box" >  Book Type:</p>
+    <mat-card-content *ngIf="book?.type">
+      <mat-chip *ngFor="let type of book?.type" matTooltip="{{type.description}}">
         {{type.name}}
       </mat-chip>
     </mat-card-content>
@@ -23,6 +23,94 @@
     <p *ngIf="book?.description">  Description: {{book?.description}}</p>
   </mat-card>
 
+    <mat-expansion-panel *ngIf="userAdmin!=='CLIENT' &&userAdmin!=''"  [expanded]= "step === 1" (opened)="step=1" (closed)="step=0"   hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Modify book data
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-card class="bc">
+
+        <mat-form-field *ngIf="bookUpdate" class="modify">
+          <mat-label>BookID</mat-label>
+          <input matInput disabled [ngModel]="bookId">
+        </mat-form-field>
+
+        <mat-form-field *ngIf="bookUpdate" class="modify">
+          <mat-label>Book name</mat-label>
+          <input matInput [(ngModel)]="bookUpdate.name" >
+        </mat-form-field>
+
+        <mat-form-field  *ngIf="bookUpdate" class="modify">
+          <mat-label>Publisher</mat-label>
+          <input matInput [(ngModel)]="bookUpdate.publisher" >
+        </mat-form-field>
+
+        <mat-form-field  *ngIf="bookUpdate" class="modify">
+          <mat-label>Deposit</mat-label>
+          <input matInput [(ngModel)]="bookUpdate.deposit" >
+        </mat-form-field>
+
+        <mat-form-field *ngIf="bookUpdate&&allLanguage" class="modify">
+          <mat-label>Language</mat-label>
+          <mat-select [(ngModel)]="bookUpdate.language" >
+            <mat-option *ngFor="let language of allLanguage" [value]="language">
+              {{language}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field *ngIf="bookUpdate" class="description-input">
+          <mat-label>Description</mat-label>
+          <textarea matInput [(ngModel)]="bookUpdate.description" maxlength="150" ></textarea>
+          <mat-hint>Maximum 150 characters</mat-hint>
+        </mat-form-field>
+
+        <mat-card-title><h3>Book Author</h3></mat-card-title>
+        <mat-card-content *ngIf="bookUpdate">
+          <mat-chip *ngFor="let author of showAuthor" >
+            <mat-label>{{author.name}}</mat-label>
+            <button matChipRemove (click)="removeAuthor(author)"><mat-icon>cancel</mat-icon></button>
+          </mat-chip>
+        </mat-card-content>
+        <br>
+        <mat-form-field *ngIf="allAuthor">
+          <mat-label>Select author</mat-label>
+          <mat-select [(ngModel)]="selectAuthor">
+            <mat-option *ngFor="let author of allAuthor" [value]="author">
+              {{author.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <button mat-icon-button *ngIf="selectAuthor" (click)="addAuthor()" class="aa"><mat-icon>add</mat-icon></button>
+
+        <mat-card-title><h3>Book Type</h3></mat-card-title>
+        <mat-card-content *ngIf="bookUpdate">
+          <mat-chip *ngFor="let type of showType" >
+            <mat-label>{{type.name}}</mat-label>
+            <button matChipRemove (click)="removeType(type)"><mat-icon>cancel</mat-icon></button>
+          </mat-chip>
+        </mat-card-content>
+        <br>
+        <mat-form-field *ngIf="allType">
+          <mat-label>Select type</mat-label>
+          <mat-select [(ngModel)]="selectType">
+            <mat-option *ngFor="let type of allType" [value]="type">
+              {{type.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <button mat-icon-button (click)="addType()" *ngIf="selectType" class="aa"><mat-icon>add</mat-icon></button>
+        <br>
+        <img *ngIf="selectedImage" [src]="selectedImage" alt="Selected Image" class="image">
+        <br>
+        <label for="sf" class="uiInputFile">Select Image</label>
+        <input type="file" (change)="onFileSelected($event)" id="sf" class="fileInput">
+
+
+      </mat-card>
+      <button mat-flat-button (click)="update()" class="update">UPDATE</button>
+    </mat-expansion-panel>
   </main>
 
 </mat-card>
