--- a/biblioteca/src/app/management/management.component.html
+++ b/biblioteca/src/app/management/management.component.html
@@ -79,9 +79,9 @@
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef> Management </th>
             <td mat-cell *matCellDef="let element" >
-              <button mat-icon-button  *ngIf="isRoot()||element.status=='ENABLE'" matTooltip="disable"><mat-icon>block_flipped</mat-icon></button>
-              <button mat-icon-button  *ngIf="isRoot()||element.status!='DISABLE'" matTooltip="enable"><mat-icon>check</mat-icon></button>
-              <button mat-icon-button  matTooltip="removing"><mat-icon>delete</mat-icon></button>
+              <button mat-icon-button (click)="locked(element.bookID)" *ngIf="isRoot()||element.status=='ENABLE'" matTooltip="disable"><mat-icon>block_flipped</mat-icon></button>
+              <button mat-icon-button (click)="available(element.bookID)" *ngIf="isRoot()||element.status!='DISABLE'" matTooltip="enable"><mat-icon>check</mat-icon></button>
+              <button mat-icon-button (click)="deleteBook(element.bookID) " matTooltip="removing"><mat-icon>delete</mat-icon></button>
             </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef=" lowForBookList "></tr>
