--- a/biblioteca/src/app/home/borrow/borrow.component.html
+++ b/biblioteca/src/app/home/borrow/borrow.component.html
@@ -2,6 +2,55 @@
 <mat-card *ngIf="userTelephone!=''">
   <mat-tab-group>
 
+    <mat-tab label="Return box" *ngIf="userAdmin=='ADMINISTRATOR'||userAdmin=='ROOT'">
+      <mat-card-title>
+        <h1 class="title">Return box</h1>
+        <button mat-flat-button (click)="getAllBorrowData()">Refresh</button>
+      </mat-card-title>
+      <mat-form-field class="example-full-width">
+        <mat-label>Search</mat-label>
+        <input matInput (keyup)="applyReturnBoxFilter($event)" placeholder="bookName,bookID,telephone,reference,time">
+      </mat-form-field>
+
+      <table mat-table #returnBoxSort="matSort" [dataSource]="returnBoxDataSource" class="mat-elevation-z8" matSort>
+        <ng-container matColumnDef="reference" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Reference </th>
+          <td mat-cell *matCellDef="let element"  > {{element.reference}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="bookID">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Book </th>
+          <td mat-cell *matCellDef="let element" > {{element.book.name}} [ID:{{element.book.bookID}}] </td>
+        </ng-container>
+
+        <ng-container matColumnDef="returnStatus">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+          <td mat-cell *matCellDef="let element"  > {{element.returnStatus}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="telephone">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> User </th>
+          <td mat-cell *matCellDef="let element"  > {{element.user.telephone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="isReturn">
+          <th mat-header-cell *matHeaderCellDef> Status of return </th>
+          <td mat-cell *matCellDef="let element" >
+            <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" ><mat-icon>check</mat-icon></button>
+            <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" (click)="bookNoReturn(element.reference)" ><mat-icon>close</mat-icon></button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="view">
+          <th mat-header-cell *matHeaderCellDef> View </th>
+          <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="openReturnPage(element.reference)"><mat-icon> visibility</mat-icon> </button></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef=" returnBoxLow "></tr>
+        <tr mat-row *matRowDef="let row; columns: returnBoxLow;"></tr>
+      </table>
+      <mat-paginator #returnBoxPaginator [pageSizeOptions]="[5, 10, 25, 50]" ></mat-paginator>
+    </mat-tab>
+
     <mat-tab label="Returned list">
       <mat-card-title>
         <h1 class="title">Returned list</h1> <button mat-flat-button (click)="getAllBorrowData()">Refresh</button>
