--- a/biblioteca/src/app/home/borrow/borrow.component.html
+++ b/biblioteca/src/app/home/borrow/borrow.component.html
@@ -36,7 +36,7 @@
         <ng-container matColumnDef="isReturn">
           <th mat-header-cell *matHeaderCellDef> Status of return </th>
           <td mat-cell *matCellDef="let element" >
-            <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" ><mat-icon>check</mat-icon></button>
+            <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" (click)="openFeedbackPage(element.reference)" ><mat-icon>check</mat-icon></button>
             <button mat-icon-button *ngIf="element.returnStatus=='WAITING_FOR_VERIFICATION'" (click)="bookNoReturn(element.reference)" ><mat-icon>close</mat-icon></button>
           </td>
         </ng-container>
