--- a/biblioteca/src/app/login/login.component.html
+++ b/biblioteca/src/app/login/login.component.html
@@ -20,7 +20,7 @@
     <mat-label>Password</mat-label>
     <input [(ngModel)]="loginData.password" matInput placeholder="Password" type="password"/>
   </mat-form-field>
-  <a class="registration" (click)="registration()">I don't have an account</a>
+  <a class="registration" (click)="openSignUpPage()">I don't have an account</a>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-flat-button mat-dialog-close>CANCEL</button>
