--- a/biblioteca/src/app/home/home.component.css
+++ b/biblioteca/src/app/home/home.component.css
@@ -1,8 +1,100 @@
+/*mat-card{*/
+/*  display: inline-block;*/
+/*  text-align: center;*/
+/*  padding: 20px;*/
+/*}*/
+/*.random-box{*/
+/*  margin: 13px;*/
+/*  width: 255px;*/
+/*  height: 200px;*/
+/*  padding: 0;*/
+/*  text-align: left;*/
+/*  border-radius: 10px;*/
+/*}*/
+/*.random-image{*/
+/*  height: 100%;*/
+/*  width: 100%;*/
+/*  object-fit: cover;*/
+/*  border-radius: 10px;*/
+/*}*/
+/*.random-text-box{*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 215px;*/
+/*  height: 165px;*/
+/*  padding: 20px;*/
+/*  background-color: rgba(0, 0, 0, 0.3);*/
+/*  backdrop-filter: blur(1px);*/
+/*  border-radius: 10px;*/
+/*  transition:0.3s ease;*/
+/*}*/
+
+/*.random-text-box:hover{*/
+/*  background-color: rgba(0, 0, 0, 0.5);*/
+/*}*/
+
+/*.random-text-box:hover .tap{*/
+/*  opacity:1;*/
+/*  transform: translateY(-50px);*/
+/*}*/
+
+/*.day{*/
+/*  color: #f2f2f2;*/
+/*  margin-top: 8px;*/
+/*  font-size: 48px;*/
+/*  font-weight: 400;*/
+/*}*/
+/*.months{*/
+/*  color: #f2f2f2;*/
+/*  font-size: 20px;*/
+/*}*/
+
+/*.random-content-box{*/
+/*  position: absolute;*/
+/*  bottom: 0;*/
+/*}*/
+
+/*.random-description{*/
+/*  max-height: 56px;*/
+/*  width: 215px;*/
+/*  display: -webkit-box;*/
+/*  -webkit-line-clamp: 3;*/
+/*  -webkit-box-orient: vertical;*/
+/*  overflow: hidden;*/
+/*  font-size: 18px;*/
+/*  line-height: 20px;*/
+/*  font-weight: 500;*/
+/*}*/
+
+/*.tap{*/
+/*  position: absolute;*/
+/*  top: 20px;*/
+/*  color: #3BAFBE !important;*/
+/*  text-align: center;*/
+/*  opacity:0;*/
+/*  transition:0.5s ease;*/
+/*  font-size: 24px;*/
+/*}*/
+
+/*.articles-box{*/
+/*  margin-top: 20px;*/
+/*  width: 765px;*/
+/*  display: inline-block;*/
+/*  text-align: left;*/
+/*}*/
+/*.random-name,.random-author{*/
+/*  color: #f2f2f2;*/
+/*}*/
+mat-label,mat-option,input{
+  font-size: 1rem;
+}
 mat-card{
   display: inline-block;
   text-align: center;
   padding: 20px;
 }
+
 .random-box{
   margin: 13px;
   width: 255px;
@@ -28,19 +120,32 @@ mat-card{
   backdrop-filter: blur(1px);
   border-radius: 10px;
   transition:0.3s ease;
+  /*overflow: hidden;*/
 }
 
 .random-text-box:hover{
   background-color: rgba(0, 0, 0, 0.5);
+  /*backdrop-filter: blur(5px);*/
 }
-
+.tap{
+  /*position: absolute;*/
+  /*right: 20px;*/
+  /*top: 20px;*/
+  /*transform: translateY(-60px);*/
+  /*transition:0.5s ease;*/
+  position: absolute;
+  top: 20px;
+  color: #3BAFBE !important;
+  text-align: center;
+  opacity:0;
+  transition:0.5s ease;
+  font-size: 24px;
+}
 .random-text-box:hover .tap{
   opacity:1;
   transform: translateY(-50px);
 }
-
 .day{
-  color: #f2f2f2;
   margin-top: 8px;
   font-size: 48px;
   font-weight: 400;
@@ -54,7 +159,6 @@ mat-card{
   position: absolute;
   bottom: 0;
 }
-
 .random-description{
   max-height: 56px;
   width: 215px;
@@ -66,15 +170,109 @@ mat-card{
   line-height: 20px;
   font-weight: 500;
 }
+.action-box{
+  margin: 13px;
+  width: 455px;
+  height: 200px;
+  padding: 0;
+  border-radius: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  transform: translateY(13px);
+}
 
-.tap{
-  position: absolute;
-  top: 20px;
-  color: #3BAFBE !important;
+.random-text-box p{
+  color: #f2f2f2;
+}
+span{
+  color: #FF6B6B;
+}
+
+h3{
+  width-min:400px ;
+  white-space: nowrap;
+  overflow: hidden;
+  text-align: left;
+  font-size: 1.25rem;
+  text-overflow: ellipsis;
+}
+
+mat-card-title{
+  font-size: 1.5rem;
+}
+
+mat-card-footer{
+  display: flex;
+  text-align: left;
+}
+
+mat-divider{
+  padding: 16px;
+}
+
+.random_content{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 12px;
+}
+
+.article-content{
+  font-size: 1.125rem;
+}
+
+main{
+  margin-inline:auto;
+  width: 1020px;
   text-align: center;
-  opacity:0;
-  transition:0.5s ease;
-  font-size: 24px;
+}
+.article-box{
+  margin: 13px;
+  width: 355px;
+  height: 260px;
+  padding: 0;
+  text-align: left;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.article-image{
+  width: 100%;
+  height: 130px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 10px 10px 0 0;
+  transition:0.3s ease;
+}
+.article-image:hover{
+  height: 260px;
+}
+
+.article-author{
+  margin: 0;
+  padding: 0 20px 0 20px;
+}
+
+.article-title{
+  height: 55px;
+  padding: 4px 20px 4px 20px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.article-like{
+  padding: 10px 20px 0 20px;
+  margin-bottom:8px ;
+}
+
+.symbolic{
+  color: #FF6B6B;
 }
 
 .articles-box{
@@ -83,6 +281,171 @@ mat-card{
   display: inline-block;
   text-align: left;
 }
-.random-name,.random-author{
-  color: #f2f2f2;
+/**/
+.page {
+  width: 415px;
+  height: 160px;
+  display: inline-table;
+  margin-right: 10px;
+  text-align: left;
+  padding: 20px;
+}
+.table-box{
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+}
+table tr{
+  height: 36px;
+}
+table tr:hover{
+  background-color: #c9c9c9;
+}
+
+.reminder{
+  width: 100%;
+  height: 100px;
+  display: block;
+  line-height: 100px;
+  font-size: 16px;
+}
+
+.lending-data-title{
+  margin: 0;
+}
+.show{
+  width: auto;
+  transition: transform 0.3s ease;
+}
+.btn1{
+  position: absolute;
+  left: 0;
+  top: 90px;
+  transform: translateX(-100px);
+}
+.btn2{
+  position: absolute;
+  right: 0;
+  top: 90px;
+  transform: translateX(100px);
+
+}
+.btn1,.btn2{
+  z-index: 100;
+  --mdc-fab-container-color: ""!important;
+  --mat-mdc-fab-color: black!important;
+  transition: 0.3s ease;
+}
+
+.action-box:hover .btn1,.action-box:hover .btn2{
+  transform: translateX(0);
+}
+
+.spinner{
+  height: 83.75px!important;
+  width: 83.75px!important;
+  display: inline-table;
+  margin: 10px;
+}
+.page1{
+  width: 415px;
+}
+
+.sum{
+  width: 103px;
+  text-align: center;
+  position: absolute;
+  top: 105px;
+
+}
+.title{
+  width: 103px;
+  text-align: center;
+}
+.statistics-box{
+  float: left;
+  width: 103.75px;
+  height: 130px;
+}
+.statistics-box:hover{
+  background-color: #dadada;
+}
+.weather{
+  font-size: 32px;
+}
+.weather-time{
+  font-size: 20px;
+}
+.conditions{
+  font-size: 26px;
+}
+.weather,.weather-time,.conditions{
+  position: relative;
+  top: 86px;
+  z-index: 100;
+  color: white;
+}
+.min{
+  color: white;
+  display: block;
+  margin: 0;
+}
+.max{
+  color: white;
+  display: block;
+  margin: 0;
+}
+.max-min-box{
+  z-index: 100;
+  width: 120px;
+  position: relative;
+  left: 60px;
+  top:12px
+
+}
+
+.img-box{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 455px;
+  height: 200px;
+  z-index: 80;
+}
+.weather-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.author-name{
+  margin-right: 8px;
+  color: white;
+}
+::-webkit-scrollbar {
+  width: 0;
+}
+.divider{
+  width: 717px;
+  margin: 24px 24px 0px 24px;
+  padding: 0;
+}
+.divider-text{
+  width: 120px;
+  margin: 0;
+  color: #818181;
+  font-size: 24px;
+  position: relative;
+  top: -12px;
+  left: 54px;
+  text-align: center;
+  background-color: white;
+  transition: 0.5s ease;
+}
+.news-box:hover .divider-text{
+  transform: translateX(100px);
+  color: #3BAFBE;
+}
+.news-box:hover .divider{
+  border-top-color: #3BAFBE;
 }
